fix: overflow

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -5,6 +5,11 @@
   font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragino Sans GB,
     Microsoft YaHei, sans-serif !important;
   -webkit-tap-highlight-color: transparent;
+  @apply antialiased;
+}
+
+html {
+  @apply overflow-hidden;
 }
 
 #__daidr_app {
